--- a/.gitignore
+++ b/.gitignore
@@ -1,101 +1,15 @@
-# Byte-compiled / optimized / DLL files
-__pycache__/
-*.py[cod]
-*$py.class
-
-# C extensions
-*.so
-
-# Distribution / packaging
-.Python
-env/
-build/
-develop-eggs/
-dist/
-downloads/
-eggs/
-.eggs/
-lib/
-lib64/
-parts/
-sdist/
-var/
-wheels/
-*.egg-info/
-.installed.cfg
-*.egg
-
-# PyInstaller
-#  Usually these files are written by a python script from a template
-#  before PyInstaller builds the exe, so as to inject date/other infos into it.
-*.manifest
-*.spec
-
-# Installer logs
-pip-log.txt
-pip-delete-this-directory.txt
-
-# Unit test / coverage reports
-htmlcov/
-.tox/
-.coverage
-.coverage.*
-.cache
-nosetests.xml
-coverage.xml
-*.cover
-.hypothesis/
-
-# Translations
-*.mo
-*.pot
-
-# Django stuff:
-*.log
-local_settings.py
-
-# Flask stuff:
-instance/
-.webassets-cache
-
-# Scrapy stuff:
-.scrapy
-
-# Sphinx documentation
-docs/_build/
-
-# PyBuilder
-target/
-
-# Jupyter Notebook
-.ipynb_checkpoints
-
-# pyenv
-.python-version
-
-# celery beat schedule file
-celerybeat-schedule
-
-# SageMath parsed files
-*.sage.py
-
-# dotenv
-.env
-
-# virtualenv
-.venv
-venv/
-ENV/
-
-# Spyder project settings
-.spyderproject
-.spyproject
-
-# Rope project settings
-.ropeproject
-
-# mkdocs documentation
-/site
-
-# mypy
-.mypy_cache/
+import numpy as np
+import scipy as sp
+import scipy.interpolate
+from scipy.interpolate import interp1d
+import matplotlib.pyplot as plt
+x = np.array([7,7,6.8,6.7,6.6,6.5,6.2,6.6,7.8,8.5,9,9.6,9.8,10.3,9.9,11.2,11.9,12.6,13.2,14,14.9,15.5,14.9,14.2,13.1,12.1,11.1,9.8,8.8,8,7.3,6.3,5.4,4.5,3.7,3.2,2.7,2.1,1.7,2.4,3.2,4.1,4.9,5.6,6,7])
+fx = np.array([9.2,8.2,7,5.8,5,3.9,3,2.8,3.3,4.3,5.3,6.3,7.4,8.3,8.7,8.7,8.9,9.4,9.4,9.4,9.6,9.8,10,10.1,10.6,11.3,11.7,12.1,12.1,12.1,12,11.9,12.1,12.4,12.5,12,11.4,11,10.7,10.5,10.7,10.6,10.6,10.6,10.2,9.2])
+new_length = 50
+x_distribuido = np.linspace(x.min(), x.max(), new_length)
+y = sp.interpolate.interp1d(x, fx, kind='nearest')(x_distribuido)
+plt.figure()
+plt.subplot(2,1,1)
+plt.plot(x, fx, 'b.-')
+plt.title('Patito')
+plt.show()
